@@ -371,7 +371,7 @@ static const OptionInfo
     { "-fuzz", 1L, ImageInfoOptionFlag, MagickFalse },
     { "+fx", 1L, DeprecateOptionFlag | FireOptionFlag, MagickFalse },
     { "-fx", 1L, ListOperatorOptionFlag | FireOptionFlag, MagickFalse },
-    { "+gamma", 0L, SimpleOperatorOptionFlag, MagickFalse },
+    { "+gamma", 1L, SimpleOperatorOptionFlag, MagickFalse },
     { "-gamma", 1L, SimpleOperatorOptionFlag, MagickFalse },
     { "+gaussian", 1L, DeprecateOptionFlag, MagickFalse },
     { "-gaussian", 1L, SimpleOperatorOptionFlag | DeprecateOptionFlag, MagickFalse },
@@ -1096,6 +1096,7 @@ static const OptionInfo
     { "LoG", LoGKernel, UndefinedOptionFlag, MagickFalse },
     { "Blur", BlurKernel, UndefinedOptionFlag, MagickFalse },
     { "Comet", CometKernel, UndefinedOptionFlag, MagickFalse },
+    { "Binomial", BinomialKernel, UndefinedOptionFlag, MagickFalse },
     { "Laplacian", LaplacianKernel, UndefinedOptionFlag, MagickFalse },
     { "Sobel", SobelKernel, UndefinedOptionFlag, MagickFalse },
     { "FreiChen", FreiChenKernel, UndefinedOptionFlag, MagickFalse },
